// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynadux Dispatch actions with multi reducers: After remove of 302 todo 1`] = `
Object {
  "log": Array [
    "LOGIN--section-A",
    "LOGIN--section-B",
    "ADD_TODO",
    "ADD_TODO",
    "REMOVE_TODO",
  ],
  "logged": true,
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
  ],
}
`;

exports[`Dynadux Dispatch actions with multi reducers: First todos 1`] = `
Object {
  "log": Array [
    "LOGIN--section-A",
    "LOGIN--section-B",
    "ADD_TODO",
    "ADD_TODO",
  ],
  "logged": true,
  "todos": Array [
    Object {
      "done": false,
      "id": "301",
      "label": "Before work beers",
    },
    Object {
      "done": false,
      "id": "302",
      "label": "After work beers",
    },
  ],
}
`;

exports[`Dynadux Dispatch actions with multi reducers: Initial state 1`] = `
Object {
  "log": Array [],
  "logged": false,
  "todos": Array [],
}
`;
